cmake_minimum_required(VERSION 3.17)
project(408_Data_Structure)

set(CMAKE_CXX_STANDARD 20)

add_executable(SqList List/SqList/SqList.h List/SqList/SqList.c List/SqList/SqListMain.c)
add_executable(LkList List/LkList/LkList.h List/LkList/LkList.c List/LkList/LkListMain.c)
add_executable(CrList List/CrList/CrList.h List/CrList/CrList.c List/CrList/CrListMain.c)
add_executable(DuList List/DuList/DuList.h List/DuList/DuList.c List/DuList/DuListMain.c)
add_executable(SqStack Stack/SqStack/SqStack.h Stack/SqStack/SqStack.c Stack/SqStack/SqStackMain.c)
add_executable(LkStack Stack/LkStack/LkStack.c Stack/LkStack/LkStack.h Stack/LkStack/LkStackMain.c)
add_executable(SqQueue Queue/SqQueue/SqQueue.c Queue/SqQueue/SqQueue.h Queue/SqQueue/SqQueueMain.c)
add_executable(LkQueue Queue/LkQueue/LkQueue.c Queue/LkQueue/LkQueue.h Queue/LkQueue/LkQueueMain.c)
add_executable(3_28Queue Queue/3_28Queue/3_28Queue.c Queue/3_28Queue/3_28Queue.h Queue/3_28Queue/3_28QueueMain.c)
add_executable(3_30Queue Queue/3_30Queue/3_30Queue.c Queue/3_30Queue/3_30Queue.h Queue/3_30Queue/3_30QueueMain.c)
add_executable(3_31QnS Stack/3_31Q&S/3_31Q&SMain.c Stack/3_31Q&S/LkStack.h Stack/3_31Q&S/LkStack.c Stack/3_31Q&S/LkQueue.h Stack/3_31Q&S/LkQueue.c)
add_executable(3_32Queue Queue/3_32Queue/3_32Queue.c Queue/3_32Queue/3_32Queue.h Queue/3_32Queue/3_32QueueMain.c)
add_executable(SqString String/SqString/SqString.c String/SqString/SqString.h String/SqString/SqStringMain.c)
add_executable(LkString String/LkString/LkString.c String/LkString/LkString.h String/LkString/LkStringMain.c)
add_executable(PatternConform String/PatternConform/SqString.c String/PatternConform/SqString.h String/PatternConform/PatternConform.c)
add_executable(BinaryTree Tree/BinaryTree/BinaryTree.c Tree/BinaryTree/BinaryTree.h Tree/BinaryTree/BinaryTreeMain.c)
add_executable(BinaryThreadTree Tree/BinaryThreadTree/BinaryThreadTree.c Tree/BinaryThreadTree/BinaryThreadTree.h Tree/BinaryThreadTree/BinaryThreadTreeMain.c)
add_executable(TreeStoreStructure Tree/TreeStoreStructure/TreeStoreStructure.c Tree/TreeStoreStructure/TreeStoreStructure.h Tree/TreeStoreStructure/TreeStoreStructureMain.c)
add_executable(TreeConversion Tree/TreeConversion/TreeConversion.c Tree/TreeConversion/TreeConversion.h Tree/TreeConversion/TreeConversionMain.c)
add_executable(TreeTraversion Tree/TreeTraversion/TreeTraversion.c Tree/TreeTraversion/TreeTraversion.h Tree/TreeTraversion/TreeTraversionMain.c)
add_executable(Expr Expr.c)